--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="grid">
         <div class="title"><h1>GUESS NUMBER</h1></div>
         <div class="subtitle"><h2>~The number is between 0 to 50~</h2></div>
-        <button class="play">Start</button>
+        <button class="play">START</button>
       </div>
       <div class="grid">
         <div class="guesses-left"><h2 class="guess-times"></h2></div>
@@ -31,9 +31,9 @@
             <p class="answer"></p>
           </div>
         </div>
-        <button class="guess">Check</button>
+        <button class="guess">CHECK</button>
       </div>
-      <input class="output" type="text" disabled>
+      <input class="output" type="text" placeholder="Press START to play">
     </main>
     <footer>
       <p>&copy; 2025 Duan Wang</p>
