--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <button class="guess">CHECK</button>
       </div>
-      <input class="output" type="text" placeholder="Press START to play">
+      <input class="output" type="text" placeholder="Press START to play" disabled>
     </main>
     <footer>
       <p>&copy; 2025 Duan Wang</p>
