--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header class="grid">
       <div class="title"><h1>GUESS NUMBER</h1></div>
-      <div class="subtitle"><h2>~The number is between 0 to 50~</h2></div>
+      <div class="subtitle"><h2>/ The number is between 0 to 50 /</h2></div>
     </header>
     <main class="container grid">
       <div class="grid">
